# printz

./: Cargo.toml  Makefile  Organisation.md  README.md  shell.nix
backend/: Dockerfile  README.md  deno.json  ipfs.ts  main.ts  postgres.ts  uuid.ts
contracts/: README.md
contracts/item/: Cargo.toml  README.md  lib.rs  tests.md
contracts/item/frank_test/: Cargo.toml  frank_test.rs  lib.rs
contracts/item/franks_test_suite/: Cargo.toml  lib.rs  psp34_test.rs  tests.md
contracts/item/interfaces/: Cargo.toml  id.rs  lib.rs  psp34.rs  psp34_burnable.rs  psp34_enumerable.rs  psp34_metadata.rs  psp34_mintable.rs
contracts/item_sale/: Cargo.toml  README.md  lib.rs
contracts/item_sale/interfaces/: lib.rs  psp34_sale.rs
docker/: README.md  compose.yaml
docker/database-init/: 01.sql  02.sh
frontend/: README.md  deno.json  index.html  package.json  pnpm-lock.yaml  vite.config.mts
frontend/public/: About.md  item.json
frontend/src/: App.vue  leches.css  main.ts  router.ts
frontend/src/assets/: reset.css
frontend/src/components/: AboutView.vue  Canvas.vue  Card.vue  FileInput.vue  FileUploader.vue  HomeView.vue  Navbar.vue  OffersView.vue  TextCommiter.vue
frontend/src/composables/: useApi.ts  useIpfs.ts  useLeches.ts  usePsp34.ts
frontend/src/plugins/: HeliaProviderPlugin.ts
uiux/: README.md
