[package]
name = "item"
version = "0.1.0"
authors = ["Frank Dierolf <frank_dierolf@web.de>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
interfaces = { path = "./interfaces", default-features = false, features = [
  "ink-as-dependency",
] }
franks_test_suite = { path = "./franks_test_suite/", default-features = false, features = [
  "ink-as-dependency",
] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "interfaces/std", "franks_test_suite/std"]
ink-as-dependency = []
